--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-ace": "^6.2.0",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "tone": "^0.12.80"
   },
   "scripts": {
     "start": "react-scripts start",
